add_library(LLVMSupport
Demangle/ItaniumDemangle.cpp
Demangle/MicrosoftDemangle.cpp
Demangle/MicrosoftDemangleNodes.cpp
Support/AArch64TargetParser.cpp
Support/APFloat.cpp
Support/APInt.cpp
Support/APSInt.cpp
Support/ARMTargetParser.cpp
Support/Allocator.cpp
Support/Atomic.cpp
Support/Chrono.cpp
Support/CommandLine.cpp
Support/ConvertUTF.cpp
Support/ConvertUTFWrapper.cpp
Support/DJB.cpp
Support/Debug.cpp
Support/Errno.cpp
Support/Error.cpp
Support/ErrorHandling.cpp
Support/FileUtilities.cpp
Support/FoldingSet.cpp
Support/FormatVariadic.cpp
Support/Hashing.cpp
Support/Host.cpp
Support/LineIterator.cpp
Support/Locale.cpp
Support/MD5.cpp
Support/ManagedStatic.cpp
Support/MathExtras.cpp
Support/Memory.cpp
Support/MemoryBuffer.cpp
Support/Mutex.cpp
Support/NativeFormatting.cpp
Support/Options.cpp
Support/Path.cpp
Support/Process.cpp
Support/Program.cpp
Support/Regex.cpp
Support/Signals.cpp
Support/SmallPtrSet.cpp
Support/SmallVector.cpp
Support/SourceMgr.cpp
Support/Statistic.cpp
Support/StringExtras.cpp
Support/StringMap.cpp
Support/StringRef.cpp
Support/StringSaver.cpp
Support/TargetParser.cpp
Support/Threading.cpp
Support/Timer.cpp
Support/Triple.cpp
Support/Twine.cpp
Support/Unicode.cpp
Support/UnicodeCaseFold.cpp
Support/Valgrind.cpp
Support/VersionTuple.cpp
Support/WithColor.cpp
Support/YAMLParser.cpp
Support/YAMLTraits.cpp
Support/circular_raw_ostream.cpp
Support/raw_ostream.cpp
    )
target_include_directories(LLVMSupport PUBLIC ${PROJECT_SOURCE_DIR}/include)
